--- a/untitled/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/untitled/src/main/webapp/WEB-INF/views/first/hello.html
@@ -7,6 +7,7 @@
 <body>
 Hello!
 <a href="/goodbye"> Say goodbye
-</a>
+</a> or
+<a href="/first/hello?name=Tom&surname=Jone">Request with parameters</a>
 </body>
 </html>
